# whisper-rs-ggml

./: Cargo.toml  WHISPER_RS_MODIFICATIONS.md
sys/: Cargo.toml  build.rs  wrapper.h
