[package]
name = "whisper-rs-sys"
version = "0.14.1"
edition = "2021"
description = "Rust bindings for whisper.cpp (FFI bindings)"
license = "Unlicense"
documentation = "https://docs.rs/whisper-rs-sys"
repository = "https://codeberg.org/tazz4843/whisper-rs"
links = "whisper"
include = [
	"whisper.cpp/bindings/javascript/package-tmpl.json",
	"whisper.cpp/bindings/CMakeLists.txt",
	"whisper.cpp/CMakeLists.txt",
	"whisper.cpp/cmake",
	"whisper.cpp/src/**",
	"whisper.cpp/include/whisper.h",
	"whisper.cpp/ggml/cmake",
	"whisper.cpp/ggml/CMakeLists.txt",
	"whisper.cpp/ggml/src/**",
	"whisper.cpp/ggml/include/*.h",
	"whisper.cpp/LICENSE",
	"src/*.rs",
	"build.rs",
	"wrapper.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
coreml = []
cuda = []
hipblas = []
openblas = []
metal = []
vulkan = []
force-debug = []
openmp = []
intel-sycl = []
# Use shared GGML backend to avoid duplicate symbol conflicts
# When use-shared-ggml is enabled, whisper-rs links to ggml-rs's whisper-specific variant
# (ggml_whisper, ggml_whisper-base, ggml_whisper-cpu, ggml_whisper-cuda, etc.)
# This prevents symbol conflicts when using both whisper-rs and llama-cpp-2
# Note: ggml-rs builds both variants (whisper and llama) unconditionally
# No namespace features needed - both variants are always available
# When use-shared-ggml is enabled, features must be enabled on ggml-rs directly
# For example: ggml-rs = { ..., features = ["cuda"] } in the parent crate's Cargo.toml
use-shared-ggml = ["dep:ggml-rs"]

[dependencies]
ggml-rs = { git = "https://github.com/joshatdia/ggml-rs.git", branch = "main", optional = true }

[build-dependencies]
# ggml-rs must be in [build-dependencies] so build.rs can access DEP_GGML_RS_* environment variables
# The build script needs these variables to find the whisper-specific GGML libraries
# When use-shared-ggml feature is enabled, this dependency is automatically enabled via "dep:ggml-rs"
ggml-rs = { git = "https://github.com/joshatdia/ggml-rs.git", branch = "main", optional = true }
cmake = "0.1"
bindgen = "0.71"
cfg-if = "1"
fs_extra = "1.3"
